--- a/src/app/package.json
+++ b/src/app/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "server": "nodemon server.js"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -20,11 +19,11 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
-    "bcrypt": "^4.0.1",
-    "bootstrap": "^4.4.1",
-    "jsonwebtoken": "^8.5.1",
+    "body-parser": "^1.19.0",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
     "mongoose": "^5.9.10",
-    "mongoose-unique-validator": "^2.0.3",
+    "nodemon": "^2.0.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
